[gd_scene load_steps=15 format=3 uid="uid://cxcpfc7gp4v8d"]

[ext_resource type="Texture2D" uid="uid://bpdtxj6j3oxk4" path="res://Sprites/Enemies/Final Boss/Final Boss.png" id="1_bhlrx"]
[ext_resource type="Script" path="res://Scripts/Common Entity Scripts/HealthComponent.gd" id="1_duhut"]
[ext_resource type="Script" path="res://Scripts/Common Entity Scripts/AttackComponent.gd" id="2_nhamq"]
[ext_resource type="PackedScene" uid="uid://btbldd3oy1vgp" path="res://Scenes/Projectiles/BossFlame.tscn" id="4_76naw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_44gyy"]
height = 28.0

[sub_resource type="Animation" id="Animation_rbxk0"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_4gkod"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_m3ohv"]
resource_name = "flame_start"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [32, 38]
}

[sub_resource type="Animation" id="Animation_6egkr"]
resource_name = "flame_middle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [48, 49, 48]
}

[sub_resource type="Animation" id="Animation_thxyu"]
resource_name = "flame_end"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [64, 70]
}

[sub_resource type="Animation" id="Animation_si83n"]
resource_name = "swing"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [96, 102]
}

[sub_resource type="Animation" id="Animation_srwvt"]
resource_name = "spawn_walker"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83, 84, 85, 86, 87, 88]
}

[sub_resource type="Animation" id="Animation_55kvf"]
resource_name = "death"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lcupr"]
_data = {
"death": SubResource("Animation_55kvf"),
"flame_end": SubResource("Animation_thxyu"),
"flame_middle": SubResource("Animation_6egkr"),
"flame_start": SubResource("Animation_m3ohv"),
"idle": SubResource("Animation_rbxk0"),
"move": SubResource("Animation_4gkod"),
"spawn_walker": SubResource("Animation_srwvt"),
"swing": SubResource("Animation_si83n")
}

[node name="FinalBoss" type="CharacterBody2D"]

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("1_duhut")

[node name="AttackComponent" type="Node2D" parent="." node_paths=PackedStringArray("CB2D")]
script = ExtResource("2_nhamq")
CB2D = NodePath("..")
dmg = 1
knockback_dealt = 170

[node name="CB2D collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_44gyy")

[node name="StateMachine" type="Node" parent="."]

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -5)
texture = ExtResource("1_bhlrx")
hframes = 16
vframes = 8
frame = 127

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_lcupr")
}

[node name="BossFlame" parent="Visuals" instance=ExtResource("4_76naw")]
visible = false
position = Vector2(44, 1)
